Change log for iftop

Attributions apply to all preceding items up to the next blank line.
Unattributed items are by Paul Warren and Chris Lightfoot.


1.0

* Fix MAC address display
    Kevin Darbyshire-Bryant <kevin@darbyshire-bryant.me.uk>

* Clean up libpcap on exit
    Brian Russell <brian.russell@brocade.com>

* Remove blinking cursor from UI
    Gerrit Renker <renker@ualberta.ca>

* Treat multicast packets as incoming, rather than incoming (IPv4) or not at
  all (IPv6).
    Andreas Schwab <schwab@linux-m68k.org>

* Minor fixes to the man page
* Man page documentation of -t mode.
* Compile time warning fixes.
    Markus Koschany <apo@gambaru.de>

* Added text output mode (-t option)
    Roman Hoog Antink <rha@open.ch> (originally by Patrik Bless)

* Fix for memory leak when DNS resolution is turned off
  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=677141
    Olivier Allard-Jacquin <olivieraj@free.fr>

* Various typos in the UI
    Gerben Roest <g.roest@grepit.nl>

* Documentation fixes
    A. Costa <agcosta@gis.net> (via Debian)

* Fix for armeb specific bug
    Lennert Buytenhek <buytenh+debian@wantstofly.org> (via Debian)

* Fix frozen order drives line totals crazy.
    Max Alekseyev <relf@os2.ru> (via Debian)

* Fix for crash on arm.
    Joey Hess <joeyh@debian.org> (via Debian)

* Fixed behaviour of "-b" option.
    Eric Cooper <ecc@cmu.edu> (via Debian)

* Support for PFLOG Interfaces
    Richard Tóth <risko@iklub.sk>

* Support for IPv6
* Fix for performance issue with address hashing
* Fix for failing link address detection for GNU/kfreebsd
* Multiple portability fixes
    Mats Erik Andersson <mats.andersson@gisladisker.se>

* Improved behaviour of sort in sent/recv only mode
    Damián Viano <des@debian.org>

* FreeBSD compilation fix 
* IPv6 reverse resolution
    Frédéric Perrin <frederic.perrin@resel.fr>

* Improved IPv6 code (removed s6_addr32 dependency)
* Fixed support for DLT_NULL
    Scott Bertilson <ssb@umn.edu>

* Typo in usage message